--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -191,7 +191,7 @@ body{
 	padding: 4px;
 	padding-left: 24px;
 	text-align: left;
-	margin-right: -100px;
+	margin-right: -1000px;
 	margin-bottom: 100px;
 }
 
@@ -216,6 +216,7 @@ body{
 .skills-container h1 {
 	text-align: center;
 	font-family: 'Raleway', sans-serif;
+	letter-spacing: 8px;
 }
 
 .skills-container ul {
