--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -195,10 +195,10 @@ body{
 	margin-bottom: 100px;
 }
 
-.headshot {
+.headshot img {
 	background-color: #22313F;
-	width: 250px;
-	height: 250px;
+	width: 300px;
+	height: 400px;
 	border-radius: 100%;
 	margin-left: auto;
 	margin-right: auto;
