--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -67,6 +67,7 @@ body{
 	color: #1BBC9B;
 	font-family: 'Oswald', sans-serif;
 	font-weight: lighter;
+	font-size: 38px;
 }
 
 .pagetitle-appear {
@@ -220,13 +221,13 @@ body{
 }
 
 .skills-container ul {
-	display: inline-block;
-	vertical-align: top;
-	font-size: 0;
-	width: 25%;
+	// display: inline-block;
+	// vertical-align: top;
+	// font-size: 0;
+	// width: 25%;
 	text-align: center;
 	list-style-type: none;
-	margin-left: 75px;
+	// margin-left: 75px;
 }
 
 .skills-container ul h2 {
@@ -237,6 +238,10 @@ body{
 
 .skills-container li {
 	font-size: 18px;
+}
+
+.thumbnail {
+	border: 0;
 }
 
 .res-link {
@@ -297,7 +302,7 @@ body{
 	}
 
 	.skills-container ul {
-		width: 100%;
+		// width: 100%;
 		margin-left: auto;
 		margin-right: auto;
 	}
